# pa5-Clarkdxx

./: README.md
src/: CMakeLists.txt  Command.cpp  DeleteCommand.cpp  DeleteCommand.h  DrawCommand.cpp  DrawCommand.h  EllipseShape.cpp  EllipseShape.h  LineShape.cpp  LineShape.h  MoveCommand.cpp  MoveCommand.h  PaintFrame.cpp  PaintFrame.h  PaintModel.cpp  PaintModel.h  PencilShape.cpp  PencilShape.h  RectShape.cpp  RectShape.h  SetBrushCommand.cpp  SetBrushCommand.h  SetPenCommand.cpp  SetPenCommand.h  Shape.cpp  Shape.h
tests/: StudentTests.cpp
